fixed trialign whitespace

--- a/extensions/amp-story-shopping/0.1/amp-story-shopping-tag.css
+++ b/extensions/amp-story-shopping/0.1/amp-story-shopping-tag.css
@@ -18,7 +18,6 @@ amp-story-shopping-tag {
   font-weight: 600 !important;
   font-size: 11px !important;
   line-height: 15.4px !important;
-  font-style: normal;  
   display: flex;
   align-items: center;
   letter-spacing: 0.01em;
